Refactor actions